tests/ui/extenv/extenv-no-args.stderr
error: env! takes 1 or 2 arguments
  --> $DIR/extenv-no-args.rs:1:13
   |
LL | fn main() { env!(); }
   |             ^^^^^^

error: aborting due to previous error

