tests/ui/extenv/extenv-no-args.rs
fn main() { env!(); } //~ ERROR: env! takes 1 or 2 arguments
